deployments/kustomize/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opentracing-example
  labels:
    istio-injection: enabled
