deployments/kustomize/backend.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: backend
spec:
  serviceName: backend
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
        version: v0.0.1
    spec:
      containers:
      - name: backend
        image: pgillich/opentracing-example:v0.0.1
        imagePullPolicy: "IfNotPresent"
        command: ["/usr/local/bin/opentracing-example"]
        args: ["backend", "--response", "PONG_"]
        ports:
          - containerPort: 55501
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
spec:
  type: ClusterIP
  ports:
   - port: 55501
  selector:
   app: backend
