deployments/kustomize/frontend.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: frontend
spec:
  serviceName: frontend
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        version: v0.0.1
    spec:
      containers:
      - name: frontend
        image: pgillich/opentracing-example:v0.0.1
        imagePullPolicy: "IfNotPresent"
        command: ["/usr/local/bin/opentracing-example"]
        args: ["frontend"]
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  type: ClusterIP
  ports:
   - port: 80
  selector:
   app: frontend
