deployments/kustomize/frontend-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: opentracing-example
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "opentracing-example.kind-01.company.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
  - "opentracing-example.kind-01.company.com"
  gateways:
  - opentracing-example
  http:
  - name: frontend
    match:
    - uri:
        prefix: "/"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: frontend
        port:
          number: 80
